syntax = "proto3";
package nova.icacontrol.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/Carina-labs/nova/x/icacontrol/types";

message RegisteredZone {
  string zone_id = 1;
  IcaConnectionInfo ica_connection_info = 2;
  IcaAccount ica_account = 3;
  TransferConnectionInfo transfer_info = 4;
  string validator_address = 5;
  string base_denom = 6;
  string sn_denom = 7;
  int64 decimal = 8;
  int64 undelegate_max_entries = 9;
  int64 deposit_max_entries = 10;
}

message IcaAccount {
  string controller_address = 1;
  string host_address = 2;
}

//zone name, connection id, portID(owner address)
message IcaConnectionInfo {
  string connection_id = 1;
  string port_id = 2;
  string channel_id = 3;
}

//transfer connection info
message TransferConnectionInfo {
  string channel_id = 1;
  string port_id = 2;
}

message ControllerAddressInfo {
  string zone_id = 1;
  string controller_address = 2;
}